Support auditing of an `EntityType` with no id